# azure-functions-connectors-python

./: .gitignore  CONTRIBUTING.md  README.md  _azure_functions_ns_fix.pth  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: generic.md  office365.md  salesforce.md  setup.md  sharepoint.md  teams.md
notes/: teams-api-metadata.json  teams-trigger-polling-limitation.md  timer-blob-alternate-plan.md
samples/office365/: README.md  function_app.py  local.settings.json.template  requirements.txt
samples/office365-email/: function_app.py
samples/salesforce/: README.md  function_app.py  local.settings.json.template
samples/sharepoint/: README.md  function_app.py  local.settings.json.template
samples/teams/: README.md  requirements.txt
src/azure/functions_connectors/: __init__.py  _cleanup.py  _client.py  _decorator.py  _dynamic_invoke.py  _env.py  _models.py  _poller.py  _processor.py  _registration.py  _state.py
src/azure/functions_connectors/_clients/: office365.py  salesforce.py  sharepoint.py
src/azure/functions_connectors/_triggers/: office365.py  salesforce.py  sharepoint.py  teams.py
